2007-10-08   Daiki Ueno  <ueno@unixuser.org>

	* mm-decode.el (mm-possibly-verify-or-decrypt): Replace PARTS with the
	ones returned from the verify-function.

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Call
	mml2015-extract-cleartext-signature if extraction failed.

2007-10-07  Daiki Ueno  <ueno@unixuser.org>

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Delete the first line
	beginning with "-----BEGIN PGP SIGNED MESSAGE-----" if extraction
	failed.

2007-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

        * Relicense "GPLv2 or later" files to "GPLv3 or later".

2007-10-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* pgg.el, pgg-def.el, pgg-gpg.el: Revert to the version in v5-10.  The
	trunk version of PGG was unmaintained.  The author of PGG, Daiki Ueno,
	recommends to use EasyPG instead of PGG.

	* pgg.el: Revert to revision 6.23.2.16

	* pgg-def.el: Revert to revision 6.6.2.14.

	* pgg-gpg.el: Revert to revision 6.23.2.34.

2007-09-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-kill-thread): Allow universal prefix zero
	to mark a thread as expirable.  Add variable `hide' to handle hiding of
	thread for both the null and zero (kill/expire thread) universal prefix
	cases.
	(gnus-summary-expire-thread): Add new function to expire a thread,
	using gnus-summary-kill-thread.
	(gnus-summary-mode-map, gnus-summary-thread-map): Add 'M-C-e' and 'T e'
	shortcuts for gnus-summary-expire-thread.
	(gnus-summary-mode-map, gnus-summary-thread-map): Remove `M-C-e' and `T
	e' bindings for gnus-summary-expire-thread.  Add `T E' binding.

2007-09-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-store-extra-entry): Allow for nil
	extras value, so an extras entry can be deleted.
	(gnus-registry-delete-extra-entry): Use it.
	(gnus-registry-fetch-extra-flags, gnus-registry-has-extra-flag)
	(gnus-registry-store-extra-flags, gnus-registry-delete-extra-flags)
	(gnus-registry-delete-all-extra-flags): Allow for arbitrary flag symbol