@@ -1,3 +1,7 @@
+2007-10-08  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* mm-util.el (mm-charset-synonym-alist): Alias gbk to cp936.
+
 2007-10-08   Daiki Ueno  <ueno@unixuser.org>
 
 	* mm-decode.el (mm-possibly-verify-or-decrypt): Replace PARTS with the
